# synthscholar

./: .gitignore  ARCHITECTURE.md  LICENSE  PRISMA_Agent_Architecture.pptx  README.md  __init__.py  agents.py  clients.py  developer.md  evidence.py  export.py  generate_ppt.py  main.py  make_diagram.py  make_simplified_diagram.py  models.py  pipeline.py  pyproject.toml  simplified_arch.md
.github/workflows/: docs.yml  smoke-test.yml  smoke.yml
docs/: README.md  architecture.md  cli.md  conf.py  index.md  installation.md  ontology.md  quickstart.md  requirements.txt
docs/_static/: custom.css  slr_ontology.schema.json
docs/api/: agents.md  export.md  index.md  models.md  pipeline.md
docs/guides/: caching.md  compare-mode.md  fastapi.md  provenance.md  ui-integration.md
docs/limitations/: index.md
prisma_review_agent/: __init__.py  agents.py  clients.py  compare.py  evidence.py  export.py  main.py  models.py  pipeline.py  validation.py
prisma_review_agent/cache/: __init__.py  admin.py  article_store.py  models.py  similarity.py  skill.py  store.py
prisma_review_agent/cache/migrations/: 001_initial.sql  002_add_sharing.sql  003_add_pipeline_checkpoints.sql
prisma_review_agent/ontology/: example.yaml  namespaces.py  rdf_export.py  rdf_store.py  reconstruct.py  rehash.py  slr_ontology.owl.ttl  slr_ontology.yaml
scripts/: build_e2e_fixture.py  smoke_test_confirmation.py
synthscholar/: __init__.py  agents.py  clients.py  compare.py  embedding.py  evidence.py  export.py  main.py  models.py  pipeline.py  provenance.py  search_cli.py
synthscholar/cache/: __init__.py  article_store.py  store.py
synthscholar/cache/migrations/: 001_initial.sql  002_add_sharing.sql  003_add_pipeline_checkpoints.sql  004_add_embeddings.sql  005_add_review_telemetry.sql
synthscholar/ontology/: __init__.py  rdf_export.py  rdf_store.py  slr_ontology.owl.ttl
tests/contract/: test_contract_006.py  test_contract_007.py  test_contract_008.py  test_contract_010.py
tests/e2e/: conftest.py  test_cli_e2e.py  test_export_validation.py  test_python_api_e2e.py  test_smoke_extended.py
tests/integration/: test_export_006.py  test_export_007.py  test_pipeline_008.py  test_pipeline_010.py
tests/unit/: test_models_006.py  test_models_007.py  test_models_008.py  test_models_010.py  test_per_db_tally.py  test_per_disorder_synthesis.py  test_search_article_block.py
