[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthscholar"
version = "0.0.1"
description = "SynthScholar — PRISMA 2020 guided multi-agent systems for systematic literature review."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Tek Raj Chhetri" },
]
keywords = [
    "systematic-review",
    "prisma",
    "literature-review",
    "pydantic-ai",
    "pubmed",
    "evidence-synthesis",
    "risk-of-bias",
    "grade",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=1.0",
    "httpx>=0.25",
    "rapidfuzz>=3.0",
    "psycopg[async]>=3.1",
    "psycopg-pool>=3.1",
    "rdflib>=6.0",
    "pyoxigraph>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]
fulltext = [
    "pymupdf>=1.24",
    "feedparser>=6.0",
]
semantic = [
    "sentence-transformers>=2.2",
]

[project.scripts]
synthscholar = "synthscholar.main:main"
synthscholar-search = "synthscholar.search_cli:main"

[project.urls]
Repository = "https://github.com/sensein/synthscholar"
Documentation = "https://github.com/sensein/synthscholar/tree/main/docs"
Issues = "https://github.com/sensein/synthscholar/issues"

# ── Build configuration ──────────────────────────────────────────────────
# Wheel: ship only the `synthscholar` package. Root-level shim files
# (pipeline.py, agents.py, etc.) and dev tooling are excluded.
[tool.hatch.build.targets.wheel]
packages = ["synthscholar"]

# Sdist: include the package, README, LICENSE, and pyproject only.
# Tests, docs, specs, scripts, generated artifacts, and root-level shim
# files stay in the git repo but are not published to PyPI.
[tool.hatch.build.targets.sdist]
include = [
    "/synthscholar",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires live PostgreSQL (PRISMA_TEST_PG_DSN)",
    "e2e: end-to-end tests using TestModel or fixture",
    "smoke: requires live API key (RUN_E2E=1)",
]
